simple user list component list

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,9 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
+<section class="nav">
+    <header>
+        <h2>Deprecated migration test app</h2>
+    </header>
+</section>
 
-{{outlet}}
+<section class="app">
+    {{outlet}}
+</section>
